# mInetiface

./: .gitignore  Jenkinsfile  README.md  build.gradle  gradle.properties  settings.gradle
commons/: build.gradle
fabric/: build.gradle  gradle.properties
fabric/src/main/java/fr/fyustorm/minetiface/: MinetifaceMod.java
fabric/src/main/resources/: fabric.mod.json  minetiface.mixins.json
fabric/src/main/resources/assets/minetiface/lang/: en_us.json
forge/: build.gradle  gradle.properties
forge/src/main/java/fr/fyustorm/minetiface/: ClientSideOnlyModEventRegistrar.java  MinetifaceMod.java
forge/src/main/resources/: pack.mcmeta
forge/src/main/resources/assets/minetiface/lang/: en_us.json
src/main/java/fr/fyustorm/minetiface/config/: BlockScoreConfig.java  MinetifaceConfig.java  (+1 more)
src/main/resources/: fabric.mod.json  minetiface.mixins.json
src/main/resources/assets/minetiface/lang/: en_us.json
tauri/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
tauri/src/: App.vue  components.d.ts  main.ts  typed-router.d.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
tauri/src/components/: ActionsFooter.vue  NavigationDrawer.vue  OverlayActivator.vue  RangeSlider.vue  Slider.vue
tauri/src/minetiface/: consts.ts  minetifaceConf.ts
tauri/src/pages/: index.vue
tauri/src/pages/config/: attack.vue  general.vue  masochist.vue  mining.vue  xp.vue
tauri/src/plugins/: index.ts  vuetify.ts
tauri/src/router/: index.ts
tauri/src/stores/: app.ts
tauri/src/styles/: form.scss  settings.scss  transitions.scss
(+34 files in other folders)
