[package]
name = "minetiface"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "system-tray", "window-set-fullscreen", "window-hide", "window-set-decorations", "window-center", "window-show", "window-set-always-on-top", "window-start-dragging", "window-set-size", "global-shortcut-all", "window-set-position", "fs-write-file", "fs-read-file", "dialog-save", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
